--- a/index.html
+++ b/index.html
@@ -34,11 +34,83 @@
       <!-- main list starts here -->
       <div class="row main-content">
         <ul class="list-unstyled col-md-12">
-
-          <!-- <li>
+        <!-- <li>
             <img class="img-responsive" src="">
             <a href=""></a>
-          </li> -->
+          </li> 
+
+          <hr> -->
+
+          <li>
+            <img class="img-responsive" src="https://d13yacurqjgara.cloudfront.net/users/465407/screenshots/3222716/dribbble_serge.gif">
+            <a href="https://dribbble.com/agdncls">Nicolas Aguado</a>
+          </li> 
+
+          <hr>
+
+          <li>
+            <img class="img-responsive" src="https://d13yacurqjgara.cloudfront.net/users/997070/screenshots/3221815/city.gif">
+            <a href="https://dribbble.com/johnyvino">Johny vino™</a>
+          </li> 
+
+          <hr>
+
+          <li>
+            <img class="img-responsive" src="https://d13yacurqjgara.cloudfront.net/users/116294/screenshots/3221553/dribbble-pdpx800x600.gif">
+            <a href="https://dribbble.com/elliotttran">Elliott Tran</a>
+          </li> 
+
+          <hr>
+
+          <li>
+            <img class="img-responsive" src="https://d13yacurqjgara.cloudfront.net/users/45617/screenshots/3219077/shot2.gif">
+            <a href="https://dribbble.com/kovadave">David Kovalev</a>
+          </li> 
+
+          <hr>
+
+          <li>
+            <img class="img-responsive" src="https://d13yacurqjgara.cloudfront.net/users/129959/screenshots/3219029/interaction---color-coding---dribbble.gif">
+            <a href="https://dribbble.com/protogeridis">Filippos Protogeridis</a>
+          </li> 
+
+          <hr>
+
+          <li>
+            <img class="img-responsive" src="https://d13yacurqjgara.cloudfront.net/users/45010/screenshots/3218661/headphones.gif">
+            <a href="https://dribbble.com/sandeepvirk87">sandeep virk</a>
+          </li> 
+
+          <hr>
+
+
+          <li>
+            <img class="img-responsive" src="https://d13yacurqjgara.cloudfront.net/users/889732/screenshots/3218037/browserpreview_tmp.gif">
+            <a href="https://dribbble.com/NikitaDuhovny">Nikita Duhovny</a>
+          </li> 
+
+          <hr>
+
+          <li>
+            <img class="img-responsive" src="https://d13yacurqjgara.cloudfront.net/users/73241/screenshots/3217872/2017new.gif">
+            <a href="https://dribbble.com/leoleung">Leo Leung</a>
+          </li> 
+
+          <hr>
+
+          <li>
+            <img class="img-responsive" src="https://d13yacurqjgara.cloudfront.net/users/1052698/screenshots/3216488/untitled-7.gif">
+            <a href="https://dribbble.com/dimyferdiana">Dimy Ferdiana</a>
+          </li> 
+
+          <hr>
+
+          <li>
+            <img class="img-responsive" src="https://d13yacurqjgara.cloudfront.net/users/44239/screenshots/3211226/tackl_postgame_stats_2x.gif">
+            <a href="https://dribbble.com/oberhaeuser">Bureau Oberhaeuser</a>
+          </li> 
+
+          <hr>
 
           <li>
             <img class="img-responsive" src="https://d13yacurqjgara.cloudfront.net/users/889732/screenshots/3200073/browserpreview_tmp.gif">
