--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container-fluid">
       <header class="row header">
         <h1>Interactive Library</h1>
-        <p>A Library of animated interaction sequences from the internet universe - curated by <a href="#">Arun Jacob</a></p>
+        <p>A Library of animated interaction sequences from the internet universe - curated by <a href="http://arunstudio.com/">Arun Jacob</a></p>
       </header>
 
       <!-- main list starts here -->
